--- a/styles/style.scss
+++ b/styles/style.scss
@@ -493,7 +493,7 @@ label img {
     position: absolute;
     width: 100%;
     height: 320px;
-    background: no-repeat url(../images/preview_layout_1.jpg);
+    background: no-repeat url(../images/preview_layout_1.png);
 }
 
 .preview-layout-2 {
