--- a/styles/style.scss
+++ b/styles/style.scss
@@ -51,6 +51,7 @@ table {
 @font-face {
     font-family: 'Inconsolata', monospace;
     src: url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap');
+    font-display: swap;
 }
 
 html {
