--- a/styles/style.css
+++ b/styles/style.css
@@ -485,7 +485,7 @@ label img {
   position: absolute;
   width: 100%;
   height: 320px;
-  background: no-repeat url(../images/preview_layout_1.png);
+  background: no-repeat url(../images/preview_layout_1.webp);
 }
 
 .preview-layout-2 {
@@ -494,7 +494,7 @@ label img {
   position: absolute;
   width: 100%;
   height: 320px;
-  background: no-repeat url(../images/preview_layout_2.png);
+  background: no-repeat url(../images/preview_layout_2.webp);
 }
 
 .preview-layout-3 {
@@ -503,7 +503,7 @@ label img {
   position: absolute;
   width: 100%;
   height: 320px;
-  background: no-repeat url(../images/preview_layout_3.jpg);
+  background: no-repeat url(../images/preview_layout_3.webp);
 }
 
 footer {
