--- a/styles/style.scss
+++ b/styles/style.scss
@@ -494,7 +494,7 @@ label img {
     position: absolute;
     width: 100%;
     height: 320px;
-    background: no-repeat url(../images/preview_layout_1.png);
+    background: no-repeat url(../images/preview_layout_1.webp);
 }
 
 .preview-layout-2 {
@@ -503,7 +503,7 @@ label img {
     position: absolute;
     width: 100%;
     height: 320px;
-    background: no-repeat url(../images/preview_layout_2.png);
+    background: no-repeat url(../images/preview_layout_2.webp);
 }
 
 .preview-layout-3 {
@@ -512,7 +512,7 @@ label img {
     position: absolute;
     width: 100%;
     height: 320px;
-    background: no-repeat url(../images/preview_layout_3.jpg);
+    background: no-repeat url(../images/preview_layout_3.webp);
 }
 
 footer {
