--- a/styles/style.scss
+++ b/styles/style.scss
@@ -51,6 +51,7 @@ table {
 @font-face {
     font-family: 'Inconsolata', monospace;
     src: url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap');
+    src: url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
     font-display: swap;
 }
 
@@ -95,7 +96,7 @@ header a:hover {
 
 header h2 {
     width: 40%;
-    font-family: 'Impacted';
+    font-family: 'Bebas Neue', cursive;
 
     font-size: 3.2rem;
 
@@ -532,7 +533,7 @@ footer {
 }
 
 .footer_text h2 {
-    font-family: 'Impacted';
+    font-family: 'Bebas Neue', cursive;
     font-size: 3.5rem;
     text-align: center;
 
@@ -557,7 +558,7 @@ footer {
 }
 
 .footer_contacts h2 {
-    font-family: 'Impacted';
+    font-family: 'Bebas Neue', cursive;
     font-size: 3rem;
 
     color: #FF8303;
