--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,7 @@ table {
 @font-face {
   font-family: 'Inconsolata', monospace;
   src: url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap");
+  src: url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
   font-display: swap;
 }
 
@@ -102,7 +103,7 @@ header a:hover {
 
 header h2 {
   width: 40%;
-  font-family: 'Impacted';
+  font-family: 'Bebas Neue', cursive;
   font-size: 3.2rem;
   text-align: center;
   color: #FF8303;
@@ -523,7 +524,7 @@ footer {
 }
 
 .footer_text h2 {
-  font-family: 'Impacted';
+  font-family: 'Bebas Neue', cursive;
   font-size: 3.5rem;
   text-align: center;
   color: #FF8303;
@@ -547,7 +548,7 @@ footer {
 }
 
 .footer_contacts h2 {
-  font-family: 'Impacted';
+  font-family: 'Bebas Neue', cursive;
   font-size: 3rem;
   color: #FF8303;
 }
